desktop version completed

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <section id="work">
       <div class="container">
         <div class="work_heading">
-          <h2>My Work</h2>
+          <h2 class="workheading">My Work</h2>
         </div>
         <div class="work_wrapper">
           <div class="controls text-center">
@@ -199,6 +199,233 @@
     </section>
     <!-- work area end -->
 
+    <!-- experience area start -->
+    <section id="experience">
+      <div class="container">
+        <div class="exp_heading">
+          <h2 class="workheading">My Experience</h2>
+        </div>
+        <div class="exp_wrapper">
+          <div class="exp_block">
+            <div class="exp_block_heading">
+              <div class="exp_block_heading_left">
+                <h3>Product Manager</h3>
+                <p>OPENLANE · Co-op</p>
+              </div>
+              <div class="exp_block_heading_right">
+                <p>May 2023 - Aug 2023 · 4 mos</p>
+              </div>
+            </div>
+            <div class="exp_block_para">
+              <p>
+                Defined product vision, strategy, and roadmaps based on market
+                research and user feedback, resulting in a 15% YoY revenue
+                growth. Conducted regular user testing and gathered feedback to
+                inform product iterations, leading to a 20% increase in user
+                satisfaction scores.
+              </p>
+              <ul>
+                <li>Product Management</li>
+                <li>Market Research</li>
+                <li>Wireframing</li>
+                <li>Product Specification</li>
+                <li>Product Roadmapping</li>
+              </ul>
+            </div>
+          </div>
+          <div class="exp_block">
+            <div class="exp_block_heading">
+              <div class="exp_block_heading_left">
+                <h3>Product Manager</h3>
+                <p>BlackBerry · Co-op</p>
+              </div>
+              <div class="exp_block_heading_right">
+                <p>Sep 2022 - Dec 2022 · 4 mos</p>
+              </div>
+            </div>
+            <div class="exp_block_para">
+              <p>
+                Defined product vision, strategy, and roadmaps based on market
+                research and user feedback, resulting in a 15% YoY revenue
+                growth. Conducted regular user testing and gathered feedback to
+                inform product iterations, leading to a 20% increase in user
+                satisfaction scores.
+              </p>
+              <ul>
+                <li>Product Management</li>
+                <li>Market Research</li>
+                <li>Wireframing</li>
+                <li>Product Specification</li>
+                <li>Product Roadmapping</li>
+              </ul>
+            </div>
+          </div>
+          <div class="exp_block">
+            <div class="exp_block_heading">
+              <div class="exp_block_heading_left">
+                <h3>Product Manager</h3>
+                <p>DarwinAI · Co-op</p>
+              </div>
+              <div class="exp_block_heading_right">
+                <p>Jan 2022 - Apr 2022 · 4 mos</p>
+              </div>
+            </div>
+            <div class="exp_block_para">
+              <p>
+                Defined product vision, strategy, and roadmaps based on market
+                research and user feedback, resulting in a 15% YoY revenue
+                growth. Conducted regular user testing and gathered feedback to
+                inform product iterations, leading to a 20% increase in user
+                satisfaction scores.
+              </p>
+              <ul>
+                <li>Product Management</li>
+                <li>Market Research</li>
+                <li>Wireframing</li>
+                <li>Product Specification</li>
+                <li>Product Roadmapping</li>
+              </ul>
+            </div>
+          </div>
+          <div class="exp_block">
+            <div class="exp_block_heading">
+              <div class="exp_block_heading_left">
+                <h3>Product Manager</h3>
+                <p>Sharechest · Co-op</p>
+              </div>
+              <div class="exp_block_heading_right">
+                <p>May 2021 - Aug 2021 · 4 mos</p>
+              </div>
+            </div>
+            <div class="exp_block_para">
+              <p>
+                Defined product vision, strategy, and roadmaps based on market
+                research and user feedback, resulting in a 15% YoY revenue
+                growth. Conducted regular user testing and gathered feedback to
+                inform product iterations, leading to a 20% increase in user
+                satisfaction scores.
+              </p>
+              <ul>
+                <li>Product Management</li>
+                <li>Market Research</li>
+                <li>Wireframing</li>
+                <li>Product Specification</li>
+                <li>Product Roadmapping</li>
+              </ul>
+            </div>
+          </div>
+          <div class="exp_block">
+            <div class="exp_block_heading">
+              <div class="exp_block_heading_left">
+                <h3>Product Manager</h3>
+                <p>RewardOps · Co-op</p>
+              </div>
+              <div class="exp_block_heading_right">
+                <p>Oct 2020 - Dec 2020 · 3 mos</p>
+              </div>
+            </div>
+            <div class="exp_block_para">
+              <p>
+                Defined product vision, strategy, and roadmaps based on market
+                research and user feedback, resulting in a 15% YoY revenue
+                growth. Conducted regular user testing and gathered feedback to
+                inform product iterations, leading to a 20% increase in user
+                satisfaction scores.
+              </p>
+              <ul>
+                <li>Product Management</li>
+                <li>Market Research</li>
+                <li>Wireframing</li>
+                <li>Product Specification</li>
+                <li>Product Roadmapping</li>
+              </ul>
+            </div>
+          </div>
+          <div class="exp_block">
+            <div class="exp_block_heading">
+              <div class="exp_block_heading_left">
+                <h3>Product Manager</h3>
+                <p>JSI Telecom · Co-op</p>
+              </div>
+              <div class="exp_block_heading_right">
+                <p>Sep 2019 - Dec 2019 · 4 mos</p>
+              </div>
+            </div>
+            <div class="exp_block_para">
+              <p>
+                Defined product vision, strategy, and roadmaps based on market
+                research and user feedback, resulting in a 15% YoY revenue
+                growth. Conducted regular user testing and gathered feedback to
+                inform product iterations, leading to a 20% increase in user
+                satisfaction scores.
+              </p>
+              <ul>
+                <li>Product Management</li>
+                <li>Market Research</li>
+                <li>Wireframing</li>
+                <li>Product Specification</li>
+                <li>Product Roadmapping</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- experience area end -->
+
+    <!-- contact area start -->
+    <section id="contact">
+      <div class="container">
+        <div class="contact_wrapper">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="contact_left">
+                <h2>Get in tocuh with me</h2>
+                <p>
+                  Thank you for taking the time to review my Product Manager
+                  portfolio. I look forward to discussing how I can contribute
+                  to your organization's success and bring innovative products
+                  to market.
+                </p>
+                <ul>
+                  <li>
+                    <a href="#"><img src="img/fb.svg" alt="" /></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="img/ln.svg" alt="" /></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="contact_right">
+                <form action="">
+                  <div class="contact_right_wrapper">
+                    <input type="email" placeholder="Enter your email" />
+                    <textarea placeholder="Write your message"></textarea>
+                    <div class="submit_button text-end">
+                      <button type="submit">Send Message</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- contact area end -->
+
+    <!-- copyright area start -->
+    <section id="copyright">
+      <div class="container">
+        <div class="copyright_wrapper text-center">
+          <p>David Qiu Copyright 2023. All rights reserved.</p>
+        </div>
+      </div>
+    </section>
+    <!-- copyright area end -->
+
     <!-- Main jQuery -->
     <script src="js/jquery-3.6.0.min.js"></script>
 
@@ -206,7 +433,7 @@
     <script src="js/bootstrap.bundle.min.js"></script>
 
     <!-- Fontawesome Script -->
-    <!-- <script src="https://kit.fontawesome.com/e7f2043049.js"></script> -->
+    <script src="https://kit.fontawesome.com/e7f2043049.js"></script>
 
     <!-- Custom jQuery -->
     <script src="js/mixitup.js"></script>
